objects/LLC_BI__Loan_Compliance__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Manufactured_Type__c</fullName>
        <description>This is a required field. This field indicates whether the covered loan or application is, or would have been, secured by a manufactured home and land, or by a manufactured home and not land.</description>
        <label>Property Securing Manufactured Home Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Mfd_Home_Int__c</fullName>
        <description>This is a required field.  This field indicates the applicant&apos;s or borrower&apos;s land property interest in the land on which a manufactured home is, or will be, located.</description>
        <label>Property Securing Manufactured Home Int</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Occupancy_Type__c</fullName>
        <description>This is a required field. This field indicates whether the property will be Owner-occupied as a principal dwelling, Not owner-occupied or N/A. This field will be used to capture occupancy information after 12/31/2017.</description>
        <label>Property Securing Occupancy Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Occupancy__c</fullName>
        <description>This is a required field. This field indicates whether the property will be Owner-occupied as a principal dwelling, Not owner-occupied or N/A. This field will be used to capture occupancy information prior to 1/1/2018.</description>
        <label>Property Securing Occupancy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Property_Type__c</fullName>
        <description>This is a required field.  This field indicates whether the loan or application was for manufactured housing, a multifamily dwelling, or a one- to-four-family dwelling other than manufactured housing.</description>
        <label>Property Securing Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Property_Value__c</fullName>
        <description>This is a required field. This field indicates in dollars, the value of the property securing the covered loan or, in the case of an application, proposed to secure the covered loan, relied on in making the credit decision.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Property Securing Property Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_State__c</fullName>
        <description>This is a required field.  This field indicates the State of the property securing the loan (or proposed to secure a loan)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If the address of the property is unknown, please enter &apos;NA&apos;.</inlineHelpText>
        <label>Property Securing State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Total_Units__c</fullName>
        <description>This is a required field.  This field indicates the number of individual dwelling units related to the property securing the covered loan or, in the case of an application, proposed to secure the covered loan.</description>
        <label>Property Securing Total Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Zip__c</fullName>
        <description>This is a required field.  This field indicates the ZIP of the property securing the loan (or proposed to secure a loan)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If the address of the property is unknown, please enter &apos;NA&apos;.</inlineHelpText>
        <label>Property Securing Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Purchaser_Type__c</fullName>
        <description>This is a required field. This field indicates the type of entity that purchased the loan.</description>
        <inlineHelpText>If you sell a loan in the same calendar year in which it was originated or purchased, you must identify the type of purchaser. If you don’t sell the loan during the same calendar year or if it didn’t result in a loan origination, enter code “0”.</inlineHelpText>
        <label>Type of Purchase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>71</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Reported_Gross_Annual_Income__c</fullName>
        <description>The system automatically populates this optional formula field to indicate the gross annual income used to make the credit decision for a HMDA reportable loan. The system queries the Gross Annual Income field on Loan Compliance and rounds the value to the nearest thousand dollar amount. If Gross Annual Income is blank, the system populates this field with a value of NA.</description>
        <formula>IF(NOT(ISBLANK(LLC_BI__HMDA_Gross_Annual_Income__c)),TEXT(ROUND(LLC_BI__HMDA_Gross_Annual_Income__c, - 3)/1000) ,&apos;NA&apos;)</formula>
        <inlineHelpText>This system-populated formula field indicates the gross annual income, rounded to the nearest thousand dollars, used to make the credit decision for HMDA reportable loans.</inlineHelpText>
        <label>Reported Gross Annual Income</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Reported_Total_Points_Fees__c</fullName>
        <description>The system automatically populates this optional formula field to indicate the total points and fees for a HMDA reportable loan. The system queries the Total Points and Fees field on Loan Compliance to populate this field. If Total Points and Fees is blank, the system populates this field with a value of NA.</description>
        <formula>IF(LLC_BI__Loan__r.LLC_BI__Product_Reference__r.LLC_BI__Product_Feature__r.LLC_BI__Is_Subject_To_TRID_Tolerances__c, IF(NOT(ISBLANK(LLC_BI__Total_Points_And_Fees__c)), IF(MOD(LLC_BI__Total_Points_And_Fees__c , 1) = 0, TEXT(LLC_BI__Total_Points_And_Fees__c) &amp; &quot;.00&quot;, IF(MOD(LLC_BI__Total_Points_And_Fees__c , 1) * 100 &lt; 10, TEXT(ROUND(LLC_BI__Total_Points_And_Fees__c ,0)) &amp; &quot;.0&quot; &amp; TEXT(ROUND(MOD(LLC_BI__Total_Points_And_Fees__c , 1), 2) * 100), TEXT(FLOOR(LLC_BI__Total_Points_And_Fees__c )) &amp; &quot;.&quot; &amp; TEXT(MIN(ROUND(MOD(LLC_BI__Total_Points_And_Fees__c , 1), 2) * 100, 99)))), &apos;NA&apos;), &apos;NA&apos;)</formula>
        <inlineHelpText>This system-populated formula field indicates the total points and fees for HMDA reportable loans.</inlineHelpText>
        <label>Reported Total Points and Fees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Reverse_Mortgage__c</fullName>
        <description>This is a required field.  This field indicates whether the covered loan is, or the application is for, a reverse mortgage.</description>
        <label>Reverse Mortgage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Submission_Of_Application__c</fullName>
        <description>This is a required field.  This field indicates whether the applicant or borrower submitted the application directly to your institution.</description>
        <label>Submission of Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Total_Loan_Costs__c</fullName>
        <description>This is a required field.  This field indicates in dollars, the amount of total loan costs.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Total Loan Costs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Total_Points_Fees__c</fullName>
        <description>--DEPRECATED-- Use Total_Points_And_Fees__c - This is a required field.  This field indicates in dollars, the total points and fees charged in connection with the covered loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If the amount is zero, enter 0.</inlineHelpText>
        <label>-D Total Points and Fees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Universal_Loan_Identifier__c</fullName>
        <description>This is a required field.  This field is the identifier used to identify and retrieve a loan or application that contains the FI&apos;s LEI, an internally generated sequence of characters, and a check digit</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The ULI begins with the financial institution&apos;s Legal Entity Identifier.  Follows the Legal Entity Identifier with up to 23 additional characters to identify the covered loan or application.  Ends with a two-character check digit that is calculated using</inlineHelpText>
        <label>Universal Loan Identifier (ULI)</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HPML_APOR_Effective_Date__c</fullName>
        <description>The system automatically populates this field with the effective date of the FFIEC APOR Index referenced for Higher-Priced Mortgage Loan. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field displays the effective date of the APOR Index used to complete HPML compliance calculations for a loan.</inlineHelpText>
        <label>HPML APOR Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HPML_APOR__c</fullName>
        <description>The system automatically populates this percentage field with the Average Prime Offer Rate percentage when compliance calculations are completed for Higher-Priced Mortgage Loan. By default, this field is blank.</description>
        <inlineHelpText>This field displays the APOR for a loan when HPML compliance calculations are completed.</inlineHelpText>
        <label>HPML APOR</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HPML_Calculation_Date__c</fullName>
        <description>The system automatically populates this field to display the date Higher-Priced Mortgage Loan compliance calculations are completed. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field displays the HPML calculation date.</inlineHelpText>
        <label>HPML Calculation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Closing_Disclosure_Date__c</fullName>
        <description>Users populate this optional field to indicate the date for the initial closing disclosure. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date for the initial closing disclosure.</inlineHelpText>
        <label>Initial Closing Disclosure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Loan_Estimate_Date__c</fullName>
        <description>Users populate this optional field to indicate the date for the initial loan estimate. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date for the initial loan estimate.</inlineHelpText>
        <label>Initial Loan Estimate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Intent_to_Proceed_Date__c</fullName>
        <description>Users populate this optional date field to indicate the date the applicant provides their intent to proceed. This date occurs after loan estimate disclosure and indicates intent to proceed with the application. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date the applicant indicated intent to proceed with the application.</inlineHelpText>
        <label>Intent to Proceed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Charge__c</fullName>
        <description>The system automatically populates this field to display the interest paid by a borrower over the life of a loan calculated as a percentage of the Amount Financed. By default, this field is blank.</description>
        <inlineHelpText>This field displays the amount of interest paid for a loan.</inlineHelpText>
        <label>Interest Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate__c</fullName>
        <description>This is a required field. This field indicates as a percentage, to at least three (3) decimal places, the interest rate.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Numbers calculated to beyond three (3) decimal places may either be reported beyond three (3) decimal places or rounded or truncated to three (3) decimal places. Decimal place trailing zeros may be either included or omitted.</inlineHelpText>
        <label>Interest Rate</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Introductory_Rate_Period__c</fullName>
        <description>This is a required field. This field indicates the number of months, or proposed number of months in the case of an application, until the first date the interest rate may change after closing or account opening.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Introductory Rate Period</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_HCM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically selects this checkbox to indicate that a loan qualifies as a High-Cost Mortgage. By default, this field is deselected.</description>
        <inlineHelpText>This field indicates if a loan qualifies as HCM.</inlineHelpText>
        <label>Is HCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_HPML__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically selects this checkbox to indicate that a loan qualifies as a Higher-Priced Mortgage Loan. By default, this field is deselected.</description>
        <inlineHelpText>This field indicates if a loan qualifies as HPML.</inlineHelpText>
        <label>Is HPML</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Manually_Edited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user manually selects this optional checkbox field to indicate that manual edits have been made to the loan compliance record on the Loan Compliance route. By default, it is deselected.</description>
        <inlineHelpText>This field indicates if a user has manually edited the loan compliance record. When selected, the system does not automatically populate fields on the loan compliance record with values entered in the workflow.</inlineHelpText>
        <label>Is Manually Edited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Used_for_Home_Improvement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional checkbox field to indicate that the loan proceeds will
        be used for home improvement. By default, this field is deselected.</description>
        <inlineHelpText>Select this checkbox to indicate that loan proceeds will be used for home
        improvement.</inlineHelpText>
        <label>Is Used for Home Improvement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Estimate_Delivery_Method__c</fullName>
        <description>Users populate this optional picklist field to indicate the delivery method the financial institution uses to provide the loan estimate to the applicant. By default, this field is blank.</description>
        <inlineHelpText>Select the loan estimate delivery method for the loan.</inlineHelpText>
        <label>Loan Estimate Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>In-person</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Id__c</fullName>
        <description>This is a required field.  This field indicates the unique loan or loan application number.</description>
        <formula>CASESAFEID(LLC_BI__Loan__c)</formula>
        <label>Loan Identification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Term__c</fullName>
        <description>This is a required field. This field indicates the number of months after which the legal obligation will mature or terminate, or would have matured or terminated.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Loan Compliances</relationshipLabel>
        <relationshipName>Loan_Compliances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mortgage_LO_NMLSR_Id__c</fullName>
        <description>This is a required field.  This field indicates the Nationwide Mortgage Licensing System and Registry mortgage loan originator unique identifier (NMLSR ID) for the mortgage loan originator.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mortgage Loan Originator NMLSR Id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Prepayment_Penalty_Term__c</fullName>
        <description>This is a required field.  This field indicates the term, in months, of any prepayment penalty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter &quot;NA&quot; if the requirement to report prepayment penalty term does not apply to the covered loan or application that your institution is reporting.</inlineHelpText>
        <label>Prepayment Penalty Term</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Purpose_of_Refinance__c</fullName>
        <description>Users populate this optional picklist field to indicate the purpose of a refinance
        loan. By default, this field is blank.</description>
        <inlineHelpText>Select the purpose of the refinance loan.</inlineHelpText>
        <label>Purpose of Refinance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Refinance_with_current_lender_and_cash-out</fullName>
                    <label>Refinance with current lender and cash-out</label>
                </value>
                <value>
                    <fullName>Refinance_with_current_lender_and_limited_cash-out</fullName>
                    <label>Refinance with current lender and limited cash-out</label>
                </value>
                <value>
                    <fullName>Refinance_with_current_lender_and_no_cash-out</fullName>
                    <label>Refinance with current lender and no cash-out</label>
                </value>
                <value>
                    <fullName>Refinance_with_different_lender_and_cash-out</fullName>
                    <label>Refinance with different lender and cash-out</label>
                </value>
                <value>
                    <fullName>Refinance_with_different_lender_and_limited_cash-out</fullName>
                    <label>Refinance with different lender and limited cash-out</label>
                </value>
                <value>
                    <fullName>Refinance_with_different_lender_and_no_cash-out</fullName>
                    <label>Refinance with different lender and no cash-out</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Qualified_Mortgage_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User selects this checkbox to indicate that a loan qualifies as a Qualified Mortgage. By default, this field is deselected.</description>
        <inlineHelpText>This field indicates if a loan qualifies as Qualified Mortgage.</inlineHelpText>
        <label>Qualified Mortgage Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Lock_Expiration_Date_and_Time__c</fullName>
        <description>Users populate this optional field to indicate the expiration date and time of the rate lock. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date and time the rate lock expires.</inlineHelpText>
        <label>Rate Lock Expiration Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Spread__c</fullName>
        <description>This is a required field.  This field indicates the rate spread which is the difference between the annual percentage rate and average prime offer. The price data take the form of a &quot;rate spread.&quot; Lenders must report the spread (difference) between the annual percentage rate (APR) on a loan and the rate on Treasury securities of comparable maturity - but only for loans with spreads above designated thresholds. So rate spreads are reported for some, but not all, reported home loans. The rate spread, along with Lien Status and HOEPA help interpret the pricing data.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter, as a percentage, to at least three (3) decimal places. Numbers calculated to beyond three (3) decimal places may either be reported beyond three (3) decimal places or rounded or truncated to three (3) decimal places.</inlineHelpText>
        <label>Rate Spread (##.### format)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Redisclosed_Closing_Disclosure_Date__c</fullName>
        <description>Users populate this optional field to indicate the date for the redisclosed closing disclosure. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date for the redisclosed closing disclosure.</inlineHelpText>
        <label>Redisclosed Closing Disclosure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Redisclosed_Loan_Estimate_Date__c</fullName>
        <description>Users populate this optional field to indicate the date for the redisclosed loan estimate. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date for the redisclosed loan estimate.</inlineHelpText>
        <label>Redisclosed Loan Estimate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Redisclosure_Reasons__c</fullName>
        <description>The system automatically populates this optional multi-select picklist to indicate the reason the loan may require redisclosure. By default, the picklist value is null.</description>
        <inlineHelpText>This system-populated multi-select picklist indicates the reason the loan may require redisclosure.</inlineHelpText>
        <label>Redisclosure Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower Requested Revisions</fullName>
                </value>
                <value>
                    <fullName>Changed Circumstance Affecting Eligibility</fullName>
                </value>
                <value>
                    <fullName>Changed Circumstance Affecting Settlement Costs</fullName>
                </value>
                <value>
                    <fullName>Interest Rate Lock</fullName>
                </value>
                <value>
                    <fullName>Loan Estimate Expiration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__TRID_Loan_Purpose__c</fullName>
        <description>Users populate this optional picklist field to indicate the TRID loan purpose. By default, this field is blank.</description>
        <inlineHelpText>Select the TRID Loan Purpose.</inlineHelpText>
        <label>TRID Loan Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Refinance</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Home Equity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__TRID_Tolerances_Exceeded_Date__c</fullName>
        <description>The system automatically populates this optional date field to indicate the date the fees associated with the loan exceeded TRID tolerances. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This system-populated field displays the date the fees exceeded TRID tolerances.</inlineHelpText>
        <label>TRID Tolerances Exceeded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__TRID_Unacceptable_Change_Date__c</fullName>
        <description>The system populates this optional date field to indicate the date that an unacceptable change of circumstance occurred for a TRID loan. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Captures the date that an unacceptable change of circumstance occurred for a TRID loan.</inlineHelpText>
        <label>Unacceptable Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Points_And_Fees__c</fullName>
        <description>The system automatically populates this field to indicate the total points and fees for a loan. By default, this field is blank.</description>
        <inlineHelpText>This field indicates the total points and fees for a loan.</inlineHelpText>
        <label>Total Points and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Loan Compliance</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LCO-{000000}</displayFormat>
        <label>Loan Compliance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Compliances</pluralLabel>
    <recordTypes>
        <fullName>LLC_BI__HMDA_Effective_2017</fullName>
        <active>true</active>
        <description>HMDA Compliance record, using rules effective as of 2017</description>
        <label>HMDA-Effective-2017</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__HMDA_Effective_2018</fullName>
        <active>true</active>
        <description>HMDA Compliance record, using rules effective as of 2018</description>
        <label>HMDA-Effective-2018</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LLC_BI__LE_CD_Date_Required</fullName>
        <active>true</active>
        <description>User must populate loan estimate or closing disclosure date.</description>
        <errorConditionFormula>OR( AND( NOT( ISBLANK( LLC_BI__Redisclosed_Closing_Disclosure_Date__c ) ), ISBLANK( LLC_BI__Initial_Closing_Disclosure_Date__c ) ), AND( OR( NOT( ISBLANK(LLC_BI__Initial_Closing_Disclosure_Date__c ) ), NOT( ISBLANK(LLC_BI__Redisclosed_Loan_Estimate_Date__c ) ), NOT( ISBLANK( LLC_BI__Redisclosed_Closing_Disclosure_Date__c ) ) ), ISBLANK( LLC_BI__Initial_Loan_Estimate_Date__c ) ) )</errorConditionFormula>
        <errorMessage>One or more required date fields are empty. Enter the initial loan estimate date or the initial closing disclosure date to continue.</errorMessage>
    </validationRules>
</CustomObject>